Merge updates from upstream
start.spring.io commit: ea7556ef1b4e45949554bcfcad95d7b52abb9211